2005-04-03  Guilhem Lavaux  <guilhem@kaffe.org>

	* libraries/clib/nio/gnu_java_nio_VMSelector.c
	(select0): Fixed typo.

2005-04-03  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/systems/unix-jthreads/jthread.c
	(jthreadedSelect): Prepare dummy sets in case one of the parameter
	is NULL.

	* libraries/clib/nio/gnu_java_nio_VMSelector.c
	(helper_select): Return the error code.
	(select0): Decode the result code.
	
2005-04-03  Rei Odaira <ray@is.s.u-tokyo.ac.jp>

	* kaffe/kaffevm/systems/unix-jthreads/jthread.c
	(jthreadedSelect): Fixed timeout handling, fdset handling. maxFd,
	readsPending, writesPending updated properly.

	* libraries/clib/nio/gnu_java_nio_VMSelector.c
	(helper_select, select0): Use a negative value to avoid confusion
	between the number of filedescriptor and the error value returned
	by select.

	* libraries/javalib/java/nio/channels/spi/AbstractSelectableChannel.java
	(register): Check for blocking state.

2005-04-03  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/systems/unix-pthreads/Makefile.am 
	(libkthread_la_SOURCES): Added header files from 
	EXTRA_DIST.

2005-04-02  Dalibor Topic  <robilad@kaffe.org>

	* config/powerpc/darwin/config.frag:
	Added -no-cpp-precomp for darwin 5.

2005-04-02  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/rebuildLib.in (LIBDIR): 
	Removed another CDPATH usage.

	Reported by:  Riccardo Mottola <zuse@libero.it>

2005-04-02  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/Makefile.am.in 
	[USE_PRECOMPILED_RT_JAR] (compile-tools-classes): 
	New target. 
	(tools.jar) Build only tools.jar classes.

	Reported by:  Riccardo Mottola <zuse@libero.it>

2005-04-02  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/systems/unix-jthreads/jthread.c,
	kaffe/kaffevm/systems/unix-jthreads/jthread.h:
	(jthread_is_blocking): Added to the API for compatibility with
	unix-pthreads.

	* kaffe/kaffevm/systems/unix-pthreads/thread-impl.c,
	kaffe/kaffevm/systems/unix-pthreads/thread-internal.h: