@@ -43,8 +43,13 @@ exception statement from your version. */
 #include <sys/types.h>
 #endif
 
+#if defined(HAVE_SYS_SELECT_H)
 #include <sys/select.h>
+#endif
+
+#if defined(HAVE_SYS_TIME_H)
 #include <sys/time.h>
+#endif
 
 #include <string.h>
 
