@@ -1,3 +1,8 @@
+2005-04-03  Dalibor Topic  <robilad@kaffe.org>
+
+	* libraries/clib/nio/gnu_java_nio_VMSelector.c: 
+	Added guards for <sys/select.h> and <sys/time.h>.
+	
 2005-04-03  Guilhem Lavaux  <guilhem@kaffe.org>
 
 	* libraries/clib/nio/gnu_java_nio_VMSelector.c
